deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress01
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress01
  template:
    metadata:
      labels:
        app: wordpress01
    spec:
      containers:
        - name: wordpress01
          image: wordpress:5-php7.1-apache
          ports:
          - containerPort: 8082
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www
      volumes:
        - name: wordpress-data
          hostPath:
            path: /home/vagrant/app_temp
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-balancer
  namespace: project
spec:
  type: LoadBalancer
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: wordpress01
